completed things : psudo code is completed, all required command functionalities are implemented. all wordnik api's are implemented.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "author": "tarak",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/tarak-kingdom/cld-tool#readme"
+  "homepage": "https://bitbucket.org/tarak-kingdom/cld-tool#readme",
+  "dependencies": {
+    "dateformat": "^3.0.3",
+    "request-json": "^0.6.3"
+  }
 }
